EXTRA_DIST = 			\
CellContent.txt 		\
Dependencies.txt 		\
Design 				\
Styles.txt 			\
excel-format-doc.txt 		\
features.txt 			\
fn-financial-bases.txt 		\
guadec2.mgp 			\
guadec3.mgp 			\
guadec4.mgp 			\
guile-gnumeric.txt 		\
linux-expo-99-gnumeric.tex 	\
linuxexpo.sty 			\
notes 				\
pref-attributes.txt 		\
python-gnumeric.txt 		\
saving.txt 			\
starting-with-python.html	\
stf-export.txt 			\
stf-parser.txt 			\
translating.sgml 		\
writing-functions.sgml
