## Process this file with automake to produce Makefile.in.

SUBDIRS = developer C
# ALL_LINGUAS with en_AU en_CA en_GB removed
#    am bg ca cs da de el es et fi fr ga gl hr hu \
#    it ja ko lv mr_IN ms nl nn no pl pt pt_BR \
#    ro ru sk sv tr uk vi zh_CN zh_TW
#
EXTRA_DIST = 				\
	README				\
	gnumeric-doc.make		\
	make-func-list.pl
